fix overflow modal buy plan

--- a/src/components/Modals/buyPlanModal/buyPlanModal.css
+++ b/src/components/Modals/buyPlanModal/buyPlanModal.css
@@ -1,6 +1,6 @@
 .buyPlanModal {
-    width: 60vw;
-    height: 80vh;
+    width: 70vw;
+    height: 85vh;
     min-height: 80vh;
     background: rgb(0, 0, 0);
     background: linear-gradient(135deg, rgb(4, 36, 34) 0%, rgb(0, 7, 7) 100%);
